// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitAddComponent should save 1`] = `
Object {
  "building": "BUILDING",
  "buildingId": "BUILDING_ID",
  "deletedBy": "DELETED_BY",
  "deletedOnUtc": Any<Date>,
  "id": undefined,
  "name": "NAME",
  "roomCount": 0,
}
`;

exports[`UnitEditComponent should update 1`] = `
Object {
  "building": "BUILDING",
  "buildingId": "BUILDING_ID",
  "deletedBy": "DELETED_BY",
  "deletedOnUtc": Any<Date>,
  "id": "ID",
  "name": "NAME",
  "roomCount": 0,
}
`;
